--- a/supermarket/src/app/app.component.html
+++ b/supermarket/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-nav-bar></app-nav-bar>
-<app-category-list></app-category-list>
-<router-outlet></router-outlet>
+<div style="background-color: rgb(242 243 244); height: 100%">
+    <app-nav-bar></app-nav-bar>
+    <router-outlet></router-outlet>
+</div>
