--- a/supermarket/src/app/components/category-list/category-list.component.html
+++ b/supermarket/src/app/components/category-list/category-list.component.html
@@ -1,17 +1,15 @@
 <div class="w-100">
-    <div class="product-category mt-4">
-        <table class="m-auto">
+    <div class="product-category mt-4 m-auto w-75">
+        <table class="">
             <tr>
                 <td>
-                    <table class="text-left">
+                    <table class="">
                         <tr>
-                            <td style="font-size: 24px; margin-top: 24px;">Departamentos</td>
+                            <td class="w-100 fs-24 mt-24">Categorias</td>
                         </tr>
                         <tr>
-                            <td style="font-size:16px;">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et
-                                dolore magna aliqua.
+                            <td class="fs-16">
+                                Compre por categorias.
                             </td>
                         </tr>
                     </table>
@@ -19,7 +17,7 @@
             </tr>
         </table>
         <div class="mt-3">
-            <div class="input-group mb-3 w-75 m-auto">
+            <div class="input-group mb-3 m-auto">
                 <input type="text" class="form-control" placeholder="Buscar categoria" aria-label="Buscar categoria"
                     aria-describedby="basic-addon2" [(ngModel)]="categoryFilter" (keyup.enter)="initCategories()">
                 <div class="input-group-append">
