--- a/supermarket/src/app/components/product-card/product-card.component.css
+++ b/supermarket/src/app/components/product-card/product-card.component.css
@@ -2,15 +2,10 @@
     border-radius: 4px !important;
     background-color: white;
     width: 100%;
-    margin-bottom: 16px;
 }
 
 .product-name {
     font-size: 16px;
-}
-
-.product-photo {
-    height: 50px;
 }
 
 .price-tag {
@@ -18,7 +13,7 @@
     color: green;
 }
 
-.add-button {
+.add-to-cart-button {
     background-color: #00a000;
     color: white;
     width: 100%;
